--- a/frontend/src/Components/Pages/Mens/ProductPageComponents/SingleProductDivCSS.model.css
+++ b/frontend/src/Components/Pages/Mens/ProductPageComponents/SingleProductDivCSS.model.css
@@ -8,7 +8,10 @@
       25%, 75% { opacity: 0.7; } 
      
     }
-  
+  .zoom div{
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+  }
     .flash:hover {
 
   opacity: 1;
