added on sunday morning

--- a/frontend/src/Components/Pages/Mobile/Covers.css
+++ b/frontend/src/Components/Pages/Mobile/Covers.css
@@ -2,6 +2,7 @@
     /* border: 1px solid green; */
     width: 80%;
     margin:50px auto;
+    text-align: left;
 }
 .main_cov_div{
     /* border: 1px solid blue; */
